# QT_OPENCV

./: .gitignore  CMakeLists.txt  CV_OBJECT.cpp  CV_OBJECT.hpp  ImgOperations.hpp  ImgStack.cpp  ImgStack.hpp  QImage2Mat.hpp  README.md  cv_gray.cpp  cv_gray.hpp  imageframe.cpp  imageframe.hpp  imageframe.ui  launchmenu.cpp  launchmenu.hpp  launchmenu.ui  main.cpp  res.qrc  ui_imageframe.h  ui_launchmenu.h
